--- a/views/cave.pug
+++ b/views/cave.pug
@@ -1,3 +1,4 @@
+//-Author: Matthew Skogen
 extends ../layouts/layout
 block append head
   // Our Custom CSS
@@ -34,35 +35,35 @@ block content
       nav#sidebar
         .sidebar-header
           h3 Customize Your Stoke
-        ul.list-unstyled.components
-          li.active
-            .input-group
-              // input.form-control(type='text', aria-label='Text input with dropdown button')
-              .input-group-append
-                button.btn.btn-outline-secondary.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Pass Held
-                .dropdown-menu
-                  a#ikonPass.dropdown-item(href='#') Ikon Pass
-                  a#epicLocal.dropdown-item(href='#') Epic Local Pass
-                  a#passThree.dropdown-item(href='#') Superpass or whatever
-                  .dropdown-divider(role='separator')
-                  a#noPass.dropdown-item(href='#') Not a Season Passholder
-          h6 Please rate the importance of each of these items on a scale of 1-10
-          li
-            label(for='trafficRange') Drive Time
-            br
-            input#trafficRange.custom-range(name='trafficRange', type='range', min='1', max='10', step='0.5')
-          li
-            label(for='snowConditionsRange') Snow Conditions
-            br
-            input#snowConditionsRange.custom-range(name='snowConditionsRange', type='range', min='1', max='10', step='0.5')
-          li
-            label(for='weatherRange') Weather
-            br
-            input#weatherRange.custom-range(name='weatherRange', type='range', min='1', max='10', step='0.5')
-            li
-              label(for='snowfallRange') Desired Snowfall
-              br
-              input#weatherRange.custom-range(name='snowfallRange', type='range', min='1', max='10', step='0.5')
+        .form-group
+          label(for='passHeld') Pass Held:
+          select#passHeld.form-control
+            option None
+            option Ikon Pass
+            option Epic Local Pass
+        .form-group
+          label(for='snowConditionsRange') Snow Surface Type:
+          select#snowConditionsRange.form-control
+            option Powder
+            option Packed Powder
+            option Machine Made
+            option Machine Groomed
+            option Hard Packed
+            option Spring
+            option Corn
+            option Variable
+            option Wet
+        .form-group
+          label(for='trafficRange') Arrival Time:
+          select#sel1.form-control
+            option ASAP
+            option No Rush
+        .form-group
+          label(for='weatherRange') Preferred Weather:
+          select#sel1.form-control
+            option No Preference
+            option Cold
+            option Hot
       // Page Content
       #content
         nav.navbar.navbar-expand-lg.navbar-light.bg-light
