--- a/views/cave.pug
+++ b/views/cave.pug
@@ -81,7 +81,7 @@ block content
                 th Welcome to BlizzardKicker,
                     td= currentUser
           form(action="/cave/logout" method="post")
-            button.btn.btn-warning(type="submit") Log Out
+            button.btn.btn-warning(type="submit") Alg
           form(action="/cave/alg" method="post")
             button.btn.btn-warning(type="submit") Alg
           br
