load skiInfo at launch

--- a/layouts/layout.pug
+++ b/layouts/layout.pug
@@ -30,6 +30,8 @@ block vars
               a.nav-link(href="/login") Login
             li.nav-item#register
               a.nav-link(href="/register") Register
+            li.nav-item#prefs
+              a.nav-link(href="/userPrefs") Preferences
             li.nav-item#cave
               a.nav-link(href="/cave") Cave
             li.nav-item#viewData
