Fixed dropdown and working on prefs

--- a/layouts/layout.pug
+++ b/layouts/layout.pug
@@ -50,7 +50,9 @@ block vars
   Bootstrap core JavaScript
   ==================================================
 // Placed at the end of the document so the pages load faster
-script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js', integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
+script( src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
+script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous")
+script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous")
 script.
   window.jQuery || document.write('<script src="/jquery/dist/jquery-slim.min.js"><\\\/script>')
   function openForm() {
@@ -59,7 +61,6 @@ script.
   function closeForm() {
   document.getElementById("myForm").style.display = "none";
   }
-script(src='/popper.js/dist/popper.js')
-script(src='/bootstrap/dist/js/bootstrap.min.js')
+
 
 block scripts
