--- a/styles/css/cave.css
+++ b/styles/css/cave.css
@@ -1,30 +1,34 @@
 
+
 .wrapper {
 display: flex;
-width: 100%;
+align-self: stretch;
 }
 
 label {
 padding-top:5px;
 }
 
+#sidebarRow{
+-ms-flex: 0 0 230px;
+flex: 0 0 230px;
+}
 #sidebar {
-width: 250px;
+/*width: 250px;
 position: fixed;
 top: 0;
 left: 0;
 height: 100vh;
-z-index: 999;
+/*z-index: 999;*/
 background: #222;
 color: #999;
 transition: all 0.3s;
-padding:10px;
 }
 
 input, h6 {
 padding-top:10px;
 }
-
+/*
 #centerPage {
 margin-left:150px;
 }
@@ -59,4 +63,4 @@ height:50%;
 margin-right:10px;
 width:100%;
 display:overflow;
-}
+}*/
