--- a/views/cave.pug
+++ b/views/cave.pug
@@ -61,100 +61,100 @@ block sidebar
         option Hot
       br
       button.btn.btn-warning(type="submit") Save
+
+
+
 block content
   // Page Content
   // end sidebar
   // actual main page
-  .row
-    #introContent
-      button#sidebarCollapse.btn.btn-info(type='button')
-        i.fas.fa-align-left
-        span Toggle Sidebar  
-
-      p 
-        | Welcome to BlizzardKicker 
-        strong #{data.currentUser}
-      form(action="/cave/logout" method="get")
-        button.btn.btn-warning(type="submit") Log Me Out
-      br
-      form(action="/cave/alg" method="post")
-        button.btn.btn-warning(type="submit") My Preferences Are Up To Date.. Show me the Gnar!
-      br
-      table
-        th According to our calculations, you will receive maximum shred potential at:
-            td= data.bestChoice
-      br
-      br
-    #mtnRecommendation
-      #copperMountain.displayRec
-        img(src='https://media.glassdoor.com/sqll/345206/copper-mountain-squarelogo-1481645745154.png', alt='Copper Mountain')
-        span#mtnName Copper Mountain
-        span#mtnLocation Frisco, CO
-        span#mtnTemperature
-        span#mtnSkyStatus
-        span#mtnJourneyTime
-        span#mtnCoordinates(style='display: none;') 39.503467, -106.142187
-      #winterPark.displayRec
-        img(src='https://www.skyhinews.com/wp-content/uploads/2018/09/winter-park-resort-rentals-260-738.jpg', alt='Winter Park')
-        span#mtnName Winter Park
-        span#mtnLocation Winter Park, CO
-        span#mtnTemperature
-        span#mtnSkyStatus
-        span#mtnJourneyTime
-        span#mtnCoordinates(style='display: none;') 39.888026, -105.762063
-      #eldoraMountain.displayRec
-        img(src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrqO-pzZ3Sy2cpR9IURDz_ZvP5bYCzPZi2fN5KE4tu9HqRNZeq', alt='Eldora Mountain')
-        span#mtnName Eldora Mountain Resort
-        span#mtnLocation Nederland, CO
-        span#mtnTemperature
-        span#mtnSkyStatus
-        span#mtnJourneyTime
-        span#mtnCoordinates(style='display: none;') 39.937904, -105.583854
-      #keystoneResort.displayRec
-        img(src='https://slopeskishop.com/wp-content/uploads/2018/10/keystone-logo.png', alt='Keystone Resort')
-        span#mtnName Keystone Resort
-        span#mtnLocation Keystone, CO
-        span#mtnTemperature
-        span#mtnSkyStatus
-        span#mtnJourneyTime
-        span#mtnCoordinates(style='display: none;') 39.605381, -105.954722
-      #arapahoeBasin.displayRec
-        img(src='https://artbymike.files.wordpress.com/2010/09/abasin-logo-under-construction.jpg', alt='Keystone Resort')
-        span#mtnName Arapahoe Basin
-        span#mtnLocation Keystone, CO
-        span#mtnTemperature
-        span#mtnSkyStatus
-        span#mtnJourneyTime
-        span#mtnCoordinates(style='display: none;') 39.642733, -105.872157
-      #breckenridgeResort.displayRec
-        img(src='https://everythingsummit.com/sites/default/files/styles/medium/public/business/968/logo/breck_logo_9-14.jpg?itok=aaXdM_MC')
-        span#mtnName Breckenridge Resort
-        span#mtnLocation Breckenridge, CO
-        span#mtnTemperature
-        span#mtnSkyStatus
-        span#mtnJourneyTime
-        span#mtnCoordinates(style='display: none;') 39.482793, -106.065168
+  .col
+    #introContent.row
+      .col
+        button#sidebarCollapse.btn.btn-info(type='button')
+          i.fas.fa-align-left
+          span Toggle Sidebar  
+        .clearfix
+        p 
+          | Welcome to BlizzardKicker 
+          strong #{data.currentUser}
+        form(action="/cave/logout" method="get")
+          button.btn.btn-warning(type="submit") Log Me Out
+        br
+        form(action="/cave/alg" method="post")
+          button.btn.btn-warning(type="submit") My Preferences Are Up To Date.. Show me the Gnar!
+        br
+        table
+          th According to our calculations, you will receive maximum shred potential at:
+              td= data.bestChoice
+        br
+        br
+    #mtnRecommendation.row
+      .col
+        #copperMountain.displayRec
+          img(src='https://media.glassdoor.com/sqll/345206/copper-mountain-squarelogo-1481645745154.png', alt='Copper Mountain')
+          span#mtnName Copper Mountain
+          span#mtnLocation Frisco, CO
+          span#mtnTemperature
+          span#mtnSkyStatus
+          span#mtnJourneyTime
+          span#mtnCoordinates(style='display: none;') 39.503467, -106.142187
+        #winterPark.displayRec
+          img(src='https://www.skyhinews.com/wp-content/uploads/2018/09/winter-park-resort-rentals-260-738.jpg', alt='Winter Park')
+          span#mtnName Winter Park
+          span#mtnLocation Winter Park, CO
+          span#mtnTemperature
+          span#mtnSkyStatus
+          span#mtnJourneyTime
+          span#mtnCoordinates(style='display: none;') 39.888026, -105.762063
+        #eldoraMountain.displayRec
+          img(src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrqO-pzZ3Sy2cpR9IURDz_ZvP5bYCzPZi2fN5KE4tu9HqRNZeq', alt='Eldora Mountain')
+          span#mtnName Eldora Mountain Resort
+          span#mtnLocation Nederland, CO
+          span#mtnTemperature
+          span#mtnSkyStatus
+          span#mtnJourneyTime
+          span#mtnCoordinates(style='display: none;') 39.937904, -105.583854
+        #keystoneResort.displayRec
+          img(src='https://slopeskishop.com/wp-content/uploads/2018/10/keystone-logo.png', alt='Keystone Resort')
+          span#mtnName Keystone Resort
+          span#mtnLocation Keystone, CO
+          span#mtnTemperature
+          span#mtnSkyStatus
+          span#mtnJourneyTime
+          span#mtnCoordinates(style='display: none;') 39.605381, -105.954722
+        #arapahoeBasin.displayRec
+          img(src='https://artbymike.files.wordpress.com/2010/09/abasin-logo-under-construction.jpg', alt='Keystone Resort')
+          span#mtnName Arapahoe Basin
+          span#mtnLocation Keystone, CO
+          span#mtnTemperature
+          span#mtnSkyStatus
+          span#mtnJourneyTime
+          span#mtnCoordinates(style='display: none;') 39.642733, -105.872157
+        #breckenridgeResort.displayRec
+          img(src='https://everythingsummit.com/sites/default/files/styles/medium/public/business/968/logo/breck_logo_9-14.jpg?itok=aaXdM_MC')
+          span#mtnName Breckenridge Resort
+          span#mtnLocation Breckenridge, CO
+          span#mtnTemperature
+          span#mtnSkyStatus
+          span#mtnJourneyTime
+          span#mtnCoordinates(style='display: none;') 39.482793, -106.065168
     #map
     // Google Maps API scripts
-    script.
-      var map;
-      function initMap() {
-      // For now, this is the location of Copper mountain
-      //We will need to figure out how to pull the recommended lat/long from Mongo
-      //and put it in here. PS slash comments are sick, shut up
-      var mtRecommend = {lat: 39.502, lng: -106.151};
-      // The map, centered at our recommendation (CURRENTLY JUST COPPER, #IKONFTW)
-      var map = new google.maps.Map(
-      document.getElementById('map'), {zoom: 8, center: mtRecommend});
-      // The marker, positioned at Uluru
-      var marker = new google.maps.Marker({position: mtRecommend, map: map});
-      }
-      script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyC-QwVCYVzGxcwYP1MFAIBEG5Jav0hDNa8&callback=initMap', async='', defer='')
-    // jQuery CDN - Slim version (=without AJAX)
-    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
-    // Popper.JS
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
-    // Bootstrap JS
-    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js', integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm', crossorigin='anonymous')
-    // jQuery Custom Scroller CDN
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
+block scripts
+  script.
+    var map;
+    function initMap() {
+    // For now, this is the location of Copper mountain
+    //We will need to figure out how to pull the recommended lat/long from Mongo
+    //and put it in here. PS slash comments are sick, shut up
+    var mtRecommend = {lat: 39.502, lng: -106.151};
+    // The map, centered at our recommendation (CURRENTLY JUST COPPER, #IKONFTW)
+    var map = new google.maps.Map(
+    document.getElementById('map'), {zoom: 8, center: mtRecommend});
+    // The marker, positioned at Uluru
+    var marker = new google.maps.Marker({position: mtRecommend, map: map});
+    }
+    script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyC-QwVCYVzGxcwYP1MFAIBEG5Jav0hDNa8&callback=initMap', async='', defer='')
+  // jQuery Custom Scroller CDN
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
