--- a/styles/css/cave.css
+++ b/styles/css/cave.css
@@ -10,11 +10,12 @@ padding-top:5px;
 }
 
 #sidebarRow{
--ms-flex: 0 0 230px;
-flex: 0 0 230px;
+/*-ms-flex: 0 0 230px;
+flex: 0 0 230px;*/
 background: #222;
 /*display: none;*/
 }
+
 #sidebar {
 /*width: 250px;
 position: fixed;
@@ -24,7 +25,6 @@ height: 100vh;
 /*z-index: 999;*/
 background: #222;
 color: #999;
-transition: all 0.3s;
 }
 
 input, h6 {
