--- a/views/cave.pug
+++ b/views/cave.pug
@@ -5,24 +5,6 @@ block append head
   link(rel='stylesheet', href='css/cave.css')
   // Scrollbar Custom CSS
   //- link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css')
-  // Google Maps jQuery Library and meta tags
-  script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
-  // script that is supposed to expand/collapse the sidebar
-  script.
-      $(document).ready(function () {
-      $("#sidebar").mCustomScrollbar({
-      theme: "minimal"
-      });
-      $('#sidebarCollapse').on('click', function () {
-      // open or close navbar
-      $('#sidebar').toggleClass('active');
-      // close dropdowns
-      $('.collapse.in').toggleClass('in');
-      // and also adjust aria-expanded attributes we use for the open/closed arrows
-      // in our CSS
-      $('a[aria-expanded=true]').attr('aria-expanded', 'false');
-      });
-      });
     
 block vars
   - var currentPage = "cave";
@@ -143,6 +125,11 @@ block content
     // Google Maps API scripts
 block scripts
   script.
+    $(function(){
+      $('#sidebarCollapse').click(()=>{
+        $('#sidebarRow').toggleClass('d-none');
+      })
+    });
     var map;
     function initMap() {
     // For now, this is the location of Copper mountain
@@ -155,6 +142,9 @@ block scripts
     // The marker, positioned at Uluru
     var marker = new google.maps.Marker({position: mtRecommend, map: map});
     }
-    script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyC-QwVCYVzGxcwYP1MFAIBEG5Jav0hDNa8&callback=initMap', async='', defer='')
+  script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyC-QwVCYVzGxcwYP1MFAIBEG5Jav0hDNa8&callback=initMap', async='', defer='')
   // jQuery Custom Scroller CDN
   script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
+    // Google Maps jQuery Library and meta tags
+  script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
+  // script that is supposed to expand/collapse the sidebar
