--- a/layouts/layoutCave.pug
+++ b/layouts/layoutCave.pug
@@ -17,7 +17,7 @@ block vars
   //create a row the size of the entire page
   .row.justify-content-center.h-100.w-100
     //sidebar sized column
-    .col-2.h-100#sidebarRow
+    .col-2.h-100#sidebarRow.collapse
       block sidebar
     //main content
     .col.m-2.h-100
